#6: Password is exposed in EXPLAIN VIRTUAL for non local EXA connections (#69)
* #6: Password is exposed in EXPLAIN VIRTUAL for non local EXA connections

Co-authored-by: chiaradiamarcelo <chiaradiamarcelo@gmail.com>