@@ -1,6 +1,5 @@
 package com.exasol.adapter.dialects.rls;
 
-import java.util.Collections;
 import java.util.Map;
 
 import org.junit.jupiter.api.Tag;
@@ -9,7 +8,7 @@ import org.junit.jupiter.api.Tag;
 @Tag("virtual-schema")
 class RowLevelSecurityLocalIT extends AbstractRowLevelSecurityIT {
     @Override
-    protected Map<String, String> getVirtualSchemaProperties() {
-        return Collections.emptyMap();
+    protected Map<String, String> getConnectionSpecificVirtualSchemaProperties() {
+        return Map.of("IS_LOCAL", "true");
     }
 }
